jvm demo change